@@ -48,6 +48,7 @@ General Fixes:
 - Player doesn't need exactly 34 green ore for assassin quest anymore
 - Reduced critical hit chance of some ice wolves in Gelato
 - Argez now should be immune against all spells
+- Lord Hagen and Hymir shouldn't die in front of Player anymore
 
 
 
